<resources>
    <string name="app_name">ClrGame</string>
    <string name="textRulesGame">Совпадает ли название цвета слева с цветом текста справа?</string>
    <string name="textColorName">####</string>
    <string name="textColorHex">####</string>
    <string name="buttonYes">Yes</string>
    <string name="buttonNo">No</string>
    <string name="textViewTrueAnswers">0</string>
    <string name="textViewTime">60</string>
    <string name="textViewCongrats">Congratulations</string>
    <string name="textViewResultsGame">Your results: </string>
    <string name="buttonRestart">Restart</string>
    <string name="buttonCompleteAndStart">Go</string>
    <string name="buttonSendToEmail">Send</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="helperExitApp">Exit</string>
</resources>
